# library-service

./: .env.sample  .flake8  .gitignore  Dockerfile  README.md  compose.yaml  manage.py  pyproject.toml
.github/workflows/: test.yml
base/: models.py
book_service/: models.py  permissions.py  urls.py  views.py
book_service/migrations/: 0001_initial.py  0002_rename_daily_free_book_daily_fee.py
book_service/tests/: test_models.py  test_permissions.py  test_serializers.py  test_views.py
borrowings_service/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
borrowings_service/migrations/: 0001_initial.py  0002_alter_borrowing_book_alter_borrowing_user.py
borrowings_service/tests/: test_borrowing_model.py  test_borrowing_serializers.py  test_borrowing_views.py
core/: celery.py  settings.py  urls.py
core/book_service/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
core/book_service/migrations/: 0001_initial.py
core/core/: settings.py
core/settings/: __init__.py  base.py  dev.py  prod.py
library_bot/: __init__.py  bot.py  celery_app.py  tasks.py
library_bot/tests/: bot_tests.py  test_bot.py
payment/: models.py  serializers.py  tasks.py  urls.py  views.py
payment/migrations/: 0001_initial.py  0002_alter_payment_borrowing.py  0003_remove_payment_money_to_pay.py  0004_payment_money_to_pay.py
payment/tests/: test_models.py  test_serializers.py  test_stripe_payment.py  test_views.py
user/: models.py  views.py
user/management/commands/: wait_for_db.py
user/migrations/: 0001_initial.py
user/tests/: __init__.py  test_user_model.py  test_user_serializer.py  test_user_views.py
