[tool.poetry]
name = "library-service"
version = "0.1.0"
description = ""
authors = ["Dmytro <94nj111@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
flake8 = "^7.1.1"
django-filter = "^24.3"
pytelegrambotapi = "^4.25.0"
aiohttp = "^3.11.11"
python-dotenv = "^1.0.1"
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
